Added navigation icons to all pages

--- a/ImpactMap/Views/Categories/Details.cshtml
+++ b/ImpactMap/Views/Categories/Details.cshtml
@@ -4,7 +4,16 @@
     ViewBag.Title = "Category Details";
 }
 <div class="container">
+    <div class="pageInfo">
     <h2>@ViewBag.Title</h2>
+
+    <div class="subNav">
+        <a href=@Url.Action("Edit", new { id = Model.ID })><i class="fa fa-pencil" aria-hidden="true" title="Edit"></i></a>
+        <a href=@Url.Action("Index", "Categories")><i class="fa fa-list-alt" aria-hidden="true" title="Tags List"></i></a>
+        <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
+    </div>
+    </div>
+
 
     <div>
         <hr />
@@ -19,9 +28,6 @@
 
         </dl>
     </div>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
+   
 
-    </div>
+</div>
