--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -147,7 +147,7 @@
                         </th>
                     </tr>
 
-                    @*Displays each investment in the table*@
+                    @*Displays the first five investments in the table*@
                     @foreach (var item in Model.investmentsOut.Take(5))
                 {
 
