--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -91,6 +91,12 @@ a href {
     margin-left: 5px;
 }
 
+.alert{
+    color: #d91b5c;
+    margin-bottom:0;
+    padding-top:0;
+    padding-bottom: 0;
+}
 
 /*most buttons*/
 .button {
@@ -108,6 +114,11 @@ a href {
     margin-bottom: 10px;
     margin-right: 10px;
     border-radius: 5px;
+}
+
+.buttonAlert{
+    background-color: #d91b5c;
+    margin-bottom: 25px;
 }
 
 /*styles map*/
