--- a/ImpactMap/Views/Account/Register.cshtml
+++ b/ImpactMap/Views/Account/Register.cshtml
@@ -3,35 +3,40 @@
     ViewBag.Title = "New User?";
 }
 
-<h2>@ViewBag.Title</h2>
+<div class="container">
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group addpadding">
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
+    <h2>@ViewBag.Title</h2>
+
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <h4>Create a new account.</h4>
+        <hr />
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group addpadding">
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
+            </div>
         </div>
-    </div>
-    <div class="form-group addpadding">
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password"})
+        <div class="form-group addpadding">
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
+            </div>
         </div>
-    </div>
-    <div class="form-group addpadding">
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password"})
+        <div class="form-group addpadding">
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="button btn btn-default" value="Register" />
+            </div>
         </div>
-    </div>
-}
+ 
+
+   
+    }
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
