--- a/ImpactMap/Views/Categories/Delete.cshtml
+++ b/ImpactMap/Views/Categories/Delete.cshtml
@@ -4,11 +4,22 @@
     ViewBag.Title = "Delete Tags";
 }
 <div class="container">
-    <h2>@ViewBag.Title</h2>
+    <div class="pageInfo">
 
-    <h3>Are you sure you want to delete this?</h3>
+        <h2>@ViewBag.Title</h2>
+
+        <div class="subNav">
+            <a href=@Url.Action("Index", "Categories")><i class="fa fa-list-alt" aria-hidden="true" title="Tags List"></i></a>
+            <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
+        </div>
+
+    </div>
+
+    <hr />
+
+    <h3 class="alert">Are you sure you want to delete this?</h3>
     <div>
-        <hr />
+        
         <dl class="dl-horizontal">
             <dt>
                 @Html.DisplayNameFor(model => model.name)
@@ -41,11 +52,10 @@
 
             <div class="addpadding">
                 <input type="submit" value="Delete" class="button" />
+                @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", new { @class = "btn btn-default button buttonAlert" })
             </div>
 
-            <div class="form-actions no-color addpadding">
-                @Html.ActionLink("Dashboard", "Index", "Dashboard")
-            </div>
+            
         }
     </div>
     </div>
