--- a/ImpactMap/Views/Investments/Delete.cshtml
+++ b/ImpactMap/Views/Investments/Delete.cshtml
@@ -5,11 +5,21 @@
 }
 
 <div class="container">
-    <h2>@ViewBag.Title</h2>
+    <div class="pageInfo">
 
-    <h3>Are you sure you want to delete this?</h3>
+        <h2>@ViewBag.Title</h2>
+
+        <div class="subNav">
+            <a href=@Url.Action("Index", "Investments")><i class="fa fa-list-alt" aria-hidden="true" title="Investments List"></i></a>
+            <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
+        </div>
+
+    </div>
+    <hr/>
+
+    <h3 class="alert">Are you sure you want to delete this?</h3>
     <div>
-        <hr />
+  
         <dl class="dl-horizontal">
 
             <dt>
@@ -25,7 +35,15 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.amount)
+                $ @Html.DisplayFor(model => model.amount)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.isInKind)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.isInKind)
             </dd>
 
             <dt>
@@ -60,21 +78,11 @@
                 @Html.DisplayFor(model => model.projectTo.name)
             </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.isInKind)
-            </dt>
+            
 
-            <dd>
-                @Html.DisplayFor(model => model.isInKind)
-            </dd>
+            
 
-            <dt>
-                @Html.DisplayNameFor(model => model.volunteerHours)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.volunteerHours)
-            </dd>
+           
 
 
         </dl>
@@ -85,11 +93,11 @@
 
             <div class="addpadding">
                 <input type="submit" value="Delete" class="button" />
+                @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", new { @class = "btn btn-default button buttonAlert" })
             </div>
 
-            <div class="addpadding form-actions no-color">
-                @Html.ActionLink("Investments List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
-            </div>
+           
+           
         }
     </div>
     </div>
