--- a/ImpactMap/Views/Projects/Create.cshtml
+++ b/ImpactMap/Views/Projects/Create.cshtml
@@ -16,14 +16,16 @@
 
         </div>
 
-</div>
+    </div>
+
+    <hr />
 
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <hr />
+        <div class="form-horizontal col-md-6">
+            
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
