--- a/ImpactMap/Views/Projects/Delete.cshtml
+++ b/ImpactMap/Views/Projects/Delete.cshtml
@@ -5,11 +5,24 @@
 }
 
 <div class="container">
-    <h2>@ViewBag.Title</h2>
+    <div class="pageInfo">
+        <h2>@ViewBag.Title</h2>
 
-    <h3>Are you sure you want to delete this?</h3>
+        <div class="subNav">
+
+            <a href=@Url.Action("Index", "Projects")><i class="fa fa-list-alt" aria-hidden="true" title="Projects List"></i></a>
+            <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
+
+        </div>
+
+
+    </div>
+
+    <hr />
+
+    <h3 class="alert">Are you sure you want to delete this?</h3>
     <div>
-        <hr />
+        
         <dl class="dl-horizontal">
             <dt>
                 @Html.DisplayNameFor(model => model.name)
@@ -35,10 +48,9 @@
 
             <div class="addpadding">
                 <input type="submit" value="Delete" class="button" />
+                @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", new { @class = "btn btn-default button buttonAlert" })
             </div>
-            <div class="addpadding form-actions no-color">
-                @Html.ActionLink("Project List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
-            </div>
+           
         }
     </div>
 
