--- a/ImpactMap/Views/Projects/Edit.cshtml
+++ b/ImpactMap/Views/Projects/Edit.cshtml
@@ -17,12 +17,14 @@
 
     </div>
 
+    <hr />
+
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <hr />
+        <div class="form-horizontal col-md-6">
+            
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.ID)
 
