--- a/ImpactMap/Views/Reports/Create.cshtml
+++ b/ImpactMap/Views/Reports/Create.cshtml
@@ -5,7 +5,14 @@
 }
 
 <div class="container">
-    <h2>@ViewBag.Title</h2>
+    <div class="pageInfo">
+        <h2>@ViewBag.Title</h2>
+
+        <div class="subNav">
+            <a href=@Url.Action("Index", "Reports")><i class="fa fa-list-alt" aria-hidden="true" title="Reports List"></i></a>
+            <a href=@Url.Action("Index", "Dashboard")><i class="fa fa-tachometer" aria-hidden="true" title="Return to Dashboard"></i></a>
+        </div>
+    </div>
 
     @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "createReportForm" }))
     {
@@ -82,9 +89,6 @@
         </div>
     }
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
 
     </div>
 
